fix overflow roomlist

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -242,4 +242,7 @@ button:disabled {
   .center-buttons{
     text-align: center;
   }
+  #room-list-div {
+    width: 258px;
+  }
 }
